--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <h1>Word Counter</h1>
 
-<form method="POST" action="/">
+<form method="POST" action="/results">
   <p>Input the text you want analyzed here:</p>
   <textarea name="user_text"></textarea>
   <br>
